test/syntaxerrors/TestMissingRParenIF.jdc
int i = 10;
int j = 5;

if (i > (j * 2) {
    //do something
}